[package]
name = "drocsid"
version = "0.1.0"
authors = ["williamt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.3"
tokio = {version="0.2.16", features=["full"]}
rand = "0.7.3"
threadpool = "1.7.1"
serde = {version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"